# ferrbench

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: bench.rs  main.rs  results.rs  runtime.rs  utils.rs
src/http/: mod.rs  usage.rs  user_input.rs
