[package]
name = "ferrbench"
version = "0.3.2"
edition = "2018"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
colored = "3"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
native-tls = { version = "0.2", features = ["alpn"] }
pin-project-lite = "0.2"
regex = "1"
rand = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "time"] }
tokio-native-tls = "0.3"
tower = { version = "0.5", features = ["util"] }
