[package]
name = "ferrbench"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
colored = "3"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["runtime", "client", "http1", "http2"] } # TODO: Migrate the codebase from Hyper 0.14.x to 1.x
mimalloc = "0.1.43"
pin-project-lite = "0.2"
rand = "0.9"
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["tls12", "ring", "std"] }
rustls-pki-types = "1.11"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
rusty-hook = { version = "0.11" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
